--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -41,12 +41,12 @@ jobs:
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       run: |
-        printf "${{ secrets.GCP_SA_KEY }}" > ~/auth.json
+        echo "${{ secrets.GCP_SA_KEY }}" > ~/auth.json
         export GOOGLE_APPLICATION_CREDENTIALS=~/auth.json
         pwd
+        echo $GOOGLE_APPLICATION_CREDENTIALS
         ls -la ~
         cat ~/auth.json
-        
         terraform plan -input=false
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
